--- a/alfalfa-chart/values.yaml
+++ b/alfalfa-chart/values.yaml
@@ -4,7 +4,8 @@
 
 secret:
   name: "aws-secrets"
-
+namespace:
+  name: "cosim"
 env:
   public:
     JOB_QUEUE_URL: http://goaws:4100/queue/local-queue1
@@ -287,10 +288,10 @@ nginx_dashboard:
 worker:
   name: "worker" 
   label: "worker" 
-  replicas: 2
+  replicas: 1
   container:
     name: "worker"
-    image: "nrel/alfalfa-worker:0.5.1"
+    image: "nrel/alfalfa-worker"
     resources:
       limits:
         cpu: 1
@@ -381,3 +382,45 @@ filebeat:
       output.elasticsearch:
         host: '${NODE_NAME}'
         hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
+
+# cosim:
+#   name: "cosim"
+#   label: "cosim"
+#   replicas: 1
+#   container:
+#     name: "cosim"
+#     image: "kunind0/cosim"
+#     resources:
+#       limits:
+#         cpu: 1
+#         memory: "4Gi"
+#       requests:
+#         cpu: 0.5
+#         memory: "1Gi"
+#     terminationGracePeriodSeconds: 3600
+#     ports:
+#       port: 5678
+#       targetPort: 5678
+#     volumeMounts:
+#       name: "cosim-storage"
+#       mountPath: "/cosim/output"
+#   pv:
+#     name: "cosim-pv"
+#     spec:
+#       storageClassName: "manual"
+#       capacity:
+#         storage: "5Gi"
+#       accessModes: "ReadWriteOnce"
+#       hostPath:
+#         path: "/run/desktop/mnt/host/d/devel/k8_output"
+#         # path: "/Users/Grad/kunind/devel/k8_output"
+#         type: "DirectoryOrCreate"
+#   pvc:
+#     name: "cosim-pvc"
+#     spec:
+#       accessModes: "ReadWriteOnce"
+#       volumeMode: "Filesystem"
+#       resources:
+#         requests:
+#           storage: "5Gi"
+#       storageClassName: "manual"
