--- a/alfalfa-chart/templates/certbot/certbot-pvc.yaml
+++ b/alfalfa-chart/templates/certbot/certbot-pvc.yaml
@@ -2,6 +2,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ .Values.certbot.name  }}
+  namespace: {{  .Values.namespace.name  }}
 spec:
   storageClassName: {{ .Values.storageClass }}
   accessModes:
