--- a/alfalfa-chart/templates/configmaps/nginx-ingress-cm.yaml
+++ b/alfalfa-chart/templates/configmaps/nginx-ingress-cm.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{  .Values.nginx_ingress.name  }}
+  namespace: {{  .Values.namespace.name  }}
 data:
 {{ (tpl (.Files.Glob "configmaps/nginx-ingress/*").AsConfig . ) | indent 2  }}
