--- a/alfalfa-chart/templates/configmaps/nginx-ingress-https-cm.yaml
+++ b/alfalfa-chart/templates/configmaps/nginx-ingress-https-cm.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.nginx_https.name}}
+  namespace: {{  .Values.namespace.name  }}
 data:
 {{ (tpl (.Files.Glob "configmaps/nginx-ingress-https/*").AsConfig . ) | indent 2  }}
 {{ end }}
