--- a/alfalfa-chart/templates/influxdb/influxdb-deploy.yaml
+++ b/alfalfa-chart/templates/influxdb/influxdb-deploy.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.influxdb.name }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   replicas: 1
   selector:
