--- a/alfalfa-chart/templates/influxdb/influxdb-svc.yaml
+++ b/alfalfa-chart/templates/influxdb/influxdb-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.influxdb.name  }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   selector:
     app: {{ .Values.influxdb.label  }}
