--- a/alfalfa-chart/templates/ingress/web-ingress.yaml
+++ b/alfalfa-chart/templates/ingress/web-ingress.yaml
@@ -3,6 +3,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Values.web.name }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   rules:
   - host: {{ .Values.rancher.hostnames.web }}
