--- a/alfalfa-chart/templates/loadbalancer/loadbalancer.yaml
+++ b/alfalfa-chart/templates/loadbalancer/loadbalancer.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.load_balancer.name  }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   type: LoadBalancer
   externalTrafficPolicy:  {{ .Values.load_balancer.externalTrafficPolicy }}
