--- a/alfalfa-chart/templates/minio/minio-deploy.yaml
+++ b/alfalfa-chart/templates/minio/minio-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{  .Values.minio.name  }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   replicas: 1
   selector:
