--- a/alfalfa-chart/templates/minio/minio-svc.yaml
+++ b/alfalfa-chart/templates/minio/minio-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.minio.name   }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   selector:
     app: {{ .Values.minio.name  }}
