--- a/alfalfa-chart/templates/mongo/mongo-pvc.yaml
+++ b/alfalfa-chart/templates/mongo/mongo-pvc.yaml
@@ -2,6 +2,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ .Values.mongo.name  }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   storageClassName: {{ .Values.storageClass }}
   accessModes:
