--- a/alfalfa-chart/templates/mongo/mongo-svc.yaml
+++ b/alfalfa-chart/templates/mongo/mongo-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.mongo.name  }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   selector:
     app: {{ .Values.mongo.label  }}
