--- a/alfalfa-chart/templates/secrets/nginx-secret.yaml
+++ b/alfalfa-chart/templates/secrets/nginx-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: tls
+  namespace: {{ .Values.namespace.name }}
 type: Opaque
 data:
 {{ (.Files.Glob "secrets/nginx-ingress/*").AsConfig | indent 2 }}
