--- a/alfalfa-chart/templates/storageclass/storageclass.yaml
+++ b/alfalfa-chart/templates/storageclass/storageclass.yaml
@@ -3,6 +3,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: ssd
+  namespace: {{ .Values.namespace.name }}
 {{ if eq .Values.provider.name "aws" }}
 provisioner: kubernetes.io/aws-ebs
 parameters:
