--- a/alfalfa-chart/templates/web/web-deploy.yaml
+++ b/alfalfa-chart/templates/web/web-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.web.name  }}
+  namespace: {{ .Values.namespace.name }}
 spec:
   replicas: 1
   selector:
