--- a/alfalfa-chart/templates/worker/worker.yaml
+++ b/alfalfa-chart/templates/worker/worker.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.worker.name  }}
+  namespace: {{ .Values.namespace.name }}
+
 spec:
   replicas: {{ .Values.worker.replicas }}
   selector:
@@ -26,6 +28,9 @@ spec:
         - name: init-wait-for-minio
           image: alpine
           command: ["/bin/sh", "-c", "for i in $(seq 1 300); do nc -zvw1 {{  .Values.minio.name  }} {{ .Values.minio.container.ports.web  }} && exit 0 || sleep 3; done; exit 1"]
+        # - name: init-wait-for-influxdb
+        #   image: alpine
+        #   command: ["/bin/sh", "-c", "for i in $(seq 1 300); do nc -zvw1 {{  .Values.influxdb.name  }} {{ .Values.influxdb.container.ports.db_port  }} && exit 0 || sleep 3; done; exit 1"]
       containers:
         - name:  {{ .Values.worker.container.name  }}
           image: {{ .Values.worker.container.image  }}
