--- a/alfalfa-chart/Chart.yaml
+++ b/alfalfa-chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: alfalfa
-description: A Helm chart for alfalfa
+description: A Helm chart for deployment of cosim and alfalfa on Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -14,30 +14,11 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
+# Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application.
-appVersion: 0.5.1
-
-dependencies:
-  - name: elasticsearch
-    version: 7.17.1
-    repository: https://helm.elastic.co
-    tags:
-      - log_stack
-  - name: filebeat
-    version: 7.17.1
-    repository: https://helm.elastic.co
-    tags:
-      - log_stack
-  - name: kibana
-    version: 7.17.1
-    repository: https://helm.elastic.co
-    tags:
-      - log_stack
-  - name: metricbeat
-    version: 7.17.1
-    repository: https://helm.elastic.co
-    tags:
-      - log_stack
+# incremented each time you make changes to the application. Versions are not expected to
+# follow Semantic Versioning. They should reflect the version the application is using.
+# It is recommended to use it with quotes.
+appVersion: "1.16.0"
