--- a/alfalfa-chart/templates/secrets/aws-secret.yaml
+++ b/alfalfa-chart/templates/secrets/aws-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Values.secret.name }}
-  namespace: {{ .Values.namespace.name }}
+  namespace: {{ .Values.namespace.name }} #alfalfa
 type: Opaque
 data:
   {{- range $key, $val := .Values.env.private }}
